[package]
name = "myrust"
version = "0.1.0"
authors = ["linqh1 <qihua.lin@quantil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
clap = "2.33.3"
rust-crypto = "0.2.36"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
